--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,7 +10,7 @@ pull_request_rules:
         strict_method: merge
       delete_head_branch: {}
     conditions:
-      - check-status=MergableConditionsCheck
+      - 'check-status="Rule: MergableConditionsCheck"'
   - name: MergableConditionsCheck
     conditions:
       - or:
