--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,7 +10,7 @@ pull_request_rules:
         strict_method: merge
       delete_head_branch: {}
     conditions:
-      - "check-status=Rule: MergableConditionsCheck"
+      - "check-success=Rule: MergableConditionsCheck"
   - name: MergableConditionsCheck
     conditions:
       - or:
