--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   },
   "version": "0.0.0",
   "jest": {
+    "timers": "fake",
     "testMatch": [
       "**/__tests__/**/*.ts?(x)",
       "**/?(*.)+(spec|test).ts?(x)"
