--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ junit.xml
 /dist/changelog.md
 /dist/version.txt
 !/.github/workflows/release.yml
+!/.github/workflows/release-v1.yml
 !/.github/pull_request_template.md
 !/test/
 !/tsconfig.dev.json
@@ -50,3 +51,4 @@ junit.xml
 tsconfig.json
 !/API.md
 !/.github/workflows/upgrade-master.yml
+!/.github/workflows/upgrade-v1.yml
