--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 !/.gitattributes
 !/.projen/tasks.json
 !/.projen/deps.json
+!/.projen/files.json
 !/.mergify.yml
 !/.github/workflows/pull-request-lint.yml
 !/.github/workflows/stale.yml
